[gd_scene load_steps=14 format=3 uid="uid://r4aobl45amqc"]

[ext_resource type="Script" uid="uid://cjx5q4iutkmsw" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="FontFile" uid="uid://dqah31gtvyewx" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_iywne"]
[ext_resource type="PackedScene" uid="uid://ucyt4248p448" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="FontFile" uid="uid://5rl5t366etfu" path="res://assets/fonts/PixelOperator8.ttf" id="3_p57ef"]
[ext_resource type="PackedScene" uid="uid://6egknlt432yk" path="res://scenes/end.tscn" id="9_0tnpc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iywne"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p57ef"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5sy4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gee14"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0tnpc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_iywne"]
resource_name = "1x"
length = 100.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("M:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 100),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -2539), Vector2(80000, -2539)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Song:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_p57ef"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("M:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -2539)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Song:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p57ef"]
_data = {
&"1x": SubResource("Animation_iywne"),
&"RESET": SubResource("Animation_p57ef")
}

[node name="Game" type="Node2D"]
process_mode = 1
script = ExtResource("1_uwrxv")

[node name="Song" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -10.0
autoplay = true

[node name="Win" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Title" type="Label" parent="Win"]
offset_left = 53.0
offset_top = 41.0
offset_right = 903.0
offset_bottom = 142.00089
theme_override_fonts/font = ExtResource("2_iywne")
theme_override_font_sizes/font_size = 100
text = "you won!"

[node name="Attempts" type="Label" parent="Win"]
unique_name_in_owner = true
offset_left = 64.0
offset_top = 172.0
offset_right = 1841.0
offset_bottom = 223.0
theme_override_constants/line_spacing = 7
theme_override_fonts/font = ExtResource("3_p57ef")
theme_override_font_sizes/font_size = 50
text = "after 10 attempts"
vertical_alignment = 2
autowrap_mode = 2

[node name="Thingy" type="Label" parent="Win"]
unique_name_in_owner = true
visible = false
offset_left = 1013.0
offset_top = 718.0
offset_right = 1892.0
offset_bottom = 1059.0
theme_override_constants/line_spacing = 7
theme_override_fonts/font = ExtResource("3_p57ef")
theme_override_font_sizes/font_size = 30
text = "i need to make a level builder for this game because it is so annoying to make levels without hearing the songs... hard level wip"
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="Win"]
z_index = -1
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.78431374)
metadata/_edit_lock_ = true

[node name="MainMenu" type="Button" parent="Win"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.5
offset_top = -87.0
offset_right = 440.5
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_iywne")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_iywne")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p57ef")
theme_override_styles/hover = SubResource("StyleBoxFlat_u5sy4")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_gee14")
theme_override_styles/focus = SubResource("StyleBoxFlat_0tnpc")
text = "main menu"

[node name="Replay" type="Button" parent="Win"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.5
offset_top = 5.0
offset_right = 440.5
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_iywne")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_iywne")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p57ef")
theme_override_styles/hover = SubResource("StyleBoxFlat_u5sy4")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_gee14")
theme_override_styles/focus = SubResource("StyleBoxFlat_0tnpc")
text = "play again"

[node name="Pause" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="Title" type="Label" parent="Pause"]
offset_left = 53.0
offset_top = 41.0
offset_right = 903.0
offset_bottom = 142.00089
theme_override_fonts/font = ExtResource("2_iywne")
theme_override_font_sizes/font_size = 100
text = "game paused :)"

[node name="ColorRect" type="ColorRect" parent="Pause"]
z_index = -1
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.78431374)
metadata/_edit_lock_ = true

[node name="MainMenu" type="Button" parent="Pause"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.5
offset_top = -87.0
offset_right = 440.5
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_iywne")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_iywne")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p57ef")
theme_override_styles/hover = SubResource("StyleBoxFlat_u5sy4")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_gee14")
theme_override_styles/focus = SubResource("StyleBoxFlat_0tnpc")
text = "main menu"

[node name="Continue" type="Button" parent="Pause"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.5
offset_top = 5.0
offset_right = 440.5
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_iywne")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_iywne")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p57ef")
theme_override_styles/hover = SubResource("StyleBoxFlat_u5sy4")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_gee14")
theme_override_styles/focus = SubResource("StyleBoxFlat_0tnpc")
text = "continue"

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(293, 552)

[node name="End" parent="." instance=ExtResource("9_0tnpc")]
position = Vector2(3577, 2021)

[node name="Platforms" type="Node2D" parent="."]

[node name="Spikes" type="Node2D" parent="."]

[node name="Sawblades" type="Node2D" parent="."]

[node name="Portals" type="Node2D" parent="."]

[node name="SpeedPortals" type="Node2D" parent="."]

[node name="GravityPortals" type="Node2D" parent="."]

[node name="Orbs" type="Node2D" parent="."]

[node name="Borders" type="Node2D" parent="."]

[node name="Debug" type="Node2D" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Debug"]
libraries = {
&"": SubResource("AnimationLibrary_p57ef")
}

[node name="M" type="ColorRect" parent="Debug"]
offset_top = -2539.0
offset_right = 79.0
offset_bottom = 2760.0
color = Color(1, 0, 1, 1)

[node name="Atts" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 193.0
offset_top = -396.0
offset_right = 789.0
offset_bottom = -287.0
theme_override_constants/line_spacing = 7
theme_override_fonts/font = ExtResource("3_p57ef")
theme_override_font_sizes/font_size = 50
text = "attempt 1"
vertical_alignment = 2
autowrap_mode = 2

[connection signal="pressed" from="Win/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Win/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="Pause/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Pause/Continue" to="." method="_on_continue_pressed"]
[connection signal="restart" from="Player" to="." method="_on_player_restart"]
[connection signal="win" from="Player" to="." method="_on_player_win"]
